<resources>
    <string name="app_name">K22411CSampleProject</string>
    <string name="title_login_user_name">User name:</string>
    <string name="title_login_user_name_hint">Enter your user name:</string>
    <string name="title_login_password">Password:</string>
    <string name="title_login_save_login_infor">Save login infor</string>
    <string name="title_login_button_login">Login</string>
    <string name="confirm_exit_title">Exit confirmation</string>
    <string name="confirm_exit_message">Are you sure want to exit?</string>
    <string name="confirm_exit_yes">YES</string>
    <string name="confirm_exit_no">NO</string>
    <string name="title_employee">Employee</string>
    <string name="title_customer">Customer</string>
    <string name="title_healthcare">Health Care</string>
    <string name="title_salary">Salary</string>
    <string name="title_employee_healthcare">Employee Health Care</string>
    <string name="title_height">Height:</string>
    <string name="title_weight">Weight:</string>
    <string name="title_calculate">Calculate</string>
    <string name="title_clear">Clear</string>
    <string name="title_close">Close</string>
    <string name="title_thin">Thin</string>
    <string name="title_normal">Normal</string>
    <string name="title_fat">Fat</string>
    <string name="title_employee_contracts">Contracts</string>
    <string name="title_employee_attendance">Attendance</string>
    <string name="title_employee_performance">Performance</string>
    <string name="title_employee_training">Training</string>
    <string name="title_employee_request">Request</string>
    <string name="title_employee_feedback">Feedback</string>
    <string name="title_category">Category</string>
    <string name="title_product">Product</string>
    <string name="title_advanced_product">Advanced Product</string>
    <string name="title_new_customer">New Customer</string>
    <string name="title_broadcast_advertising111" />
    <string name="title_help">Help</string>
    <string name="title_broadcast_advertising">Broadcast advertising</string>
    <string name="title_customer_detail">Customer Detail</string>
    <string name="title_customer_name">Customer Name</string>
    <string name="title_customer_id">Customer ID:</string>
    <string name="title_customer_email">Customer Email:</string>
    <string name="title_customer_phone">Customer Phone:</string>
    <string name="title_customer_username">Username</string>
    <string name="title_customer_password">Password:</string>
    <string name="title_button_new">New</string>
    <string name="title_button_save">Save</string>
    <string name="title_button_remove">Remove</string>
    <string name="title_new_product">New Product</string>
    <string name="title_import_data">Import Data</string>
    <string name="title_product_help">Help</string>
</resources>